@@ -53,7 +53,7 @@ using libtorrent::aux::session_impl;
 namespace libtorrent
 {
 	http_seed_connection::http_seed_connection(peer_connection_args const& pack
-		, web_seed_entry& web)
+		, web_seed_t& web)
 		: web_connection_base(pack, web)
 		, m_url(web.url)
 		, m_web(&web)
