@@ -1,3 +1,4 @@
+	* remove internal fields from web_seed_entry
 	* separate crypto library configuration <crypto> and whether to support
 	  bittorrent protocol encryption <encryption>
 	* simplify bittorrent protocol encryption by just using internal RC4
